--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,21 @@ body {
 }
 
 header {
-  background-color: #C2AB93;
+  background-color: #290628;
   color:#f2ebfb;
   padding: 10px;
   text-align: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 3;
+  transition: height 0.3s ease-in-out;
 }
 
 header > h1 {
   font-size: 30px;
   font-weight:900;
+  margin: 0;
 }
 
 nav ul {
@@ -63,24 +69,35 @@ a:hover::after {
   grid-gap: 1px;
 }
 
-.gallery img{
+.gallery img,
+.gallery video {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border: 1px solid #290628;
-  transition: transform 0.3s ease;
+  opacity: 0.60;
+  transition: transform 1.75s, opacity 1s;
 }
 
-.gallery img:hover, .gallery img.scale {
-  transform: scale(1.1);
+.gallery img:hover,
+.gallery img.scale {
+  transform: scale(1.03) rotateY(180deg);
+  opacity: 1;
+  z-index: 2;
+  border-color: #f2ebfb;
+  border-width: 2px;
+  border-radius: 5%;
 }
 
-.gallery video{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border: 1px solid #290628;
-  transition: transform 0.3s ease;
+.gallery video.selected,
+.gallery video:hover,
+.gallery video.scale {
+  transform: scale(1.025);
+  opacity: 1;
+  z-index: 1;
+  border-color: #f2ebfb;
+  border-width: 2px;
+  border-radius: 5%;
 }
 
 .date-text p {
@@ -124,8 +141,21 @@ a:hover::after {
 
 .important-text {
   color: #290628;
-  text-decoration-line: underline;
-  text-decoration-thickness: 3px;
+  font-style:italic;
+  animation-name: resaltar-texto;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+}
+@keyframes resaltar-texto {
+  0% {
+    color: #290628;
+  }
+  50% {
+    color: red;
+  }
+  100% {
+    color: #290628;
+  }
 }
 
 .location .iframe-container {
@@ -374,7 +404,7 @@ textarea {
 }
 
 footer {
-  background-color: #C2AB93;
+  background-color: #290628;
   color:#f2ebfb;
   padding: 10px;
   text-align: center;
