--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,16 @@ a:hover::after {
   text-indent: 2em;
 }
 
+.nota p {
+  color: #bf9c76;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: justify;
+  padding-left: 10rem;
+  padding-right: 10rem;
+  text-indent: 0;
+}
+
 .important-text {
   color: #290628;
   font-style:italic;
