--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ a:hover::after {
   height: auto;
 }
 
-.dress-code h1, .location h1, .gifts h1, .contact h1 {
+.dress-code h1, .location h1, .gifts h1, .contact h1, .rafting h1  {
   margin-top: 2rem;
   margin-bottom: 2rem;
   color:#00000092;
@@ -129,7 +129,7 @@ a:hover::after {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.dress-code p, .gifts p, .location p {
+.dress-code p, .gifts p, .location p, .rafting p {
   color: #bf9c76;
   font-size: 20px;
   font-weight: 900;
